--- a/Frontend/src/assets/student.css
+++ b/Frontend/src/assets/student.css
@@ -493,11 +493,11 @@ body {
 }
 
 .small-card-payment-logo {
-    padding-top: 10px;
-    padding-left: 10px;
-    margin: 2px 5px;
-    /* margin-left: 10px; */
-    width: 50px;
+    padding-top: 15px;
+    /* padding-left: 10px; */
+    /* margin: 2px 5px; */
+    margin-left: 10px;
+    width: 40px;
     /* height: 50px; */
 }
 
@@ -521,7 +521,46 @@ body {
     display: grid;
     justify-content: left;
     align-items: left;
-    width: 226px;
+    width: 250px;
+}
+
+.items-container {
+    display: flex;
+}
+
+.small-card-payment-private {
+    background-color: #04B5FA;
+    color: white;
+    font-size: 12px;
+    font-weight: 200;
+    font-style: italic;
+    border-bottom-left-radius: 7px;
+    border-top-right-radius: 7px;
+    width: 60px;
+    height: 26px;
+    position: absolute;
+    right: 0px;
+    top: 0px;
+    /* padding: 0px 10px; */
+    padding-top: 3px;
+    padding-left: 10px;
+}
+
+.btn-payment-detail {
+    background-color: white !important;
+    border-color: white !important;
+    position: absolute;
+    right: 15px;
+    bottom: 35px;
+    color: black !important;
+}
+
+.btn-payment-detail:hover {
+    box-shadow: none !important;
+}
+
+.btn-payment-detail:focus {
+    box-shadow: none !important;
 }
 
 .data-table-div-class {
