--- a/Frontend/src/assets/mentorWallet.css
+++ b/Frontend/src/assets/mentorWallet.css
@@ -313,6 +313,10 @@ body {
     align-items: center;
 }
 
+.full-height {
+    height: 100vh !important;
+}
+
 .data-table-div-class {
     border-radius: 5px;
     box-shadow: 0 0.125rem 0.625rem rgba(90,97,105,.12);
