--- a/Frontend/src/assets/mentorWallet.css
+++ b/Frontend/src/assets/mentorWallet.css
@@ -395,7 +395,7 @@ body {
     color: #333333;
 }
 
-.wallet-page-header-class button {
+.btn-add-payment {
     font-size: 16px;
     font-weight: bold;
     color: #FFFFFF;
@@ -403,36 +403,28 @@ body {
     border-color: transparent;
 }
 
-.wallet-page-header-class button:hover {
+.btn-add-payment:hover {
     font-size: 16px;
     font-weight: bold;
     color: #FFFFFF;
-    background-color: #04B5FA;
-    border-color: transparent;
+    background-color: #04B5FA !important;
+    border-color:  #04B5FA !important;
 }
 
-.wallet-page-header-class button:focus {
+.btn-add-payment:focus {
     font-size: 16px;
     font-weight: bold;
     color: #FFFFFF;
-    background-color: #04B5FA;
-    border-color: transparent;
+    background-color: #04B5FA !important;
+    border-color:  #04B5FA !important;
 }
 
-.wallet-page-header-class button:target {
+.btn-add-payment:active {
     font-size: 16px;
     font-weight: bold;
     color: #FFFFFF;
-    background-color: #04B5FA;
-    border-color: transparent;
-}
-
-.wallet-page-header-class button:focus-visible {
-    font-size: 16px;
-    font-weight: bold;
-    color: #FFFFFF;
-    background-color: #04B5FA;
-    border-color: transparent;
+    background-color: #04B5FA !important;
+    border-color:  #04B5FA !important;
 }
 
 .wallet-data-table-class {
