--- a/Frontend/src/assets/landingpage.css
+++ b/Frontend/src/assets/landingpage.css
@@ -539,7 +539,9 @@ body {
     background-color: #D9F2FE;
     border-radius: 100px;
     padding: 0px 10px;
+    padding-top: 2px;
     margin-right: 10px;
+    font-weight: 500;
 }
 
 .tag-title {
