--- a/Frontend/src/assets/student.css
+++ b/Frontend/src/assets/student.css
@@ -796,6 +796,110 @@ body {
     height: 50px;
 }
 
+.library-card {
+    /* max-width: 80%; */
+}
+
+.library-card .MuiTab-wrapper {
+    text-transform: none;
+    font-size: 18px;
+    padding: 0px 20px;
+}
+
+.library-card .MuiTabs-indicator{
+    background-color: #04B5FA;
+}
+
+.library-card .MuiTab-textColorPrimary.Mui-selected {
+    color: #04B5FA;
+    font-weight: bold;
+    outline: none;
+}
+
+.library-tab {
+    /* border-bottom: 1px solid red; */
+    border-top-left-radius: 7px !important;
+    border-top-right-radius: 7px !important;
+    background-color: white !important;
+    box-shadow: none !important;
+    border-bottom: 1px solid #E3E3E3;
+}
+
+.library-saved-content {
+    width: 340px;
+    /* margin-right: 20px; */
+}
+
+.saved-content-avatar {
+    width: 36px;
+    height: 36px;
+    border-radius: 7px;
+    margin-right: 10px;
+}
+
+.library-content-name {
+    font-size: 16px;
+    padding-top: 5px;
+    color: #333333;
+}
+
+.small-card3-desc {
+    padding-top: 5px;
+    height: 30px;
+    margin-bottom: 50px;
+}
+
+.small-card3 {
+    width: 345px;
+    height: 170px;
+    padding: 10px 15px;
+    margin: 10px 10px;
+    border-radius: 7px;
+    box-shadow: 0 0.125rem 0.625rem rgba(90,97,105,.14);
+}
+
+.small-card3-avatar {
+    width: 62px;
+    height: 62px;
+    border-radius: 7px;
+    margin-right: 10px;
+}
+
+.small-card3-date-time {
+    position: absolute;
+    left: 40px;
+    bottom: 20px;
+}
+
+.small-card3-name {
+    font-size: 16px;
+    padding-top: 5px;
+    font-weight: bold;
+    color: #333333;
+}
+
+/* .history-card {
+    margin-top: 20px;
+} */
+
+.history-card-header {
+    border-bottom: 1px solid #E0E0E0;
+    /* display: flex; */
+}
+
+.history-card-header-title {
+    padding-left: 5px;
+    color: #333333;
+    font-size: 18px;
+    font-weight: 500;
+    float: left;
+}
+
+.filter-items-group {
+    float: right;
+    display: flex;
+}
+
 .data-table-div-class {
     border-radius: 5px;
     box-shadow: 0 0.125rem 0.625rem rgba(90,97,105,.12);
