--- a/Frontend/src/assets/mentor.css
+++ b/Frontend/src/assets/mentor.css
@@ -336,3 +336,7 @@
 .custom-control-label::before {
     pointer-events: none !important;
 }
+
+.notification-container-top-right {
+    right: 350px !important;
+}
