--- a/Frontend/src/assets/student.css
+++ b/Frontend/src/assets/student.css
@@ -419,11 +419,14 @@ body {
     color: #333333;
     padding-bottom: 10px;
     line-height: 18px;
+    width: 1100px;
 }
 
 .mentor-detail-myself p {
     margin-bottom: 10px;
     font-weight: 400;
+    text-overflow: ellipsis;
+	overflow: hidden;
 }
 
 .mentor-detail-myself a {
