--- a/Frontend/src/assets/mentor.css
+++ b/Frontend/src/assets/mentor.css
@@ -282,6 +282,16 @@
     border: none;
 }
 
+.btn-available-time-add-delete:disabled {
+    background-color: white !important;
+    box-shadow: none;
+    border: none;
+}
+
+.disable-event {
+    pointer-events: none;
+}
+
 .available-time-input {
     color: #333333;
     font-size: 16px;
