--- a/Frontend/src/assets/common.css
+++ b/Frontend/src/assets/common.css
@@ -78,3 +78,10 @@
 .forgot-class:hover {
   color: #04B5FA;
 }
+
+.email-sent-label {
+  color: #333333;
+  font-size: 20px;
+  font-weight: 400;
+  text-align: center;
+}
