--- a/Frontend/src/assets/landingpage.css
+++ b/Frontend/src/assets/landingpage.css
@@ -531,7 +531,9 @@ body {
     color: #333333;
 }
 
-.brainsshare-tag {
+.brainsshare-tag 
+{
+    width: 75px;
     height: 25px;
     font-size: 14px;
     font-weight: 400;
@@ -543,6 +545,8 @@ body {
     margin-right: 10px;
     margin-bottom: 10px;
     font-weight: 500;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 
 .tag-title {
