--- a/Frontend/src/assets/landingpage.css
+++ b/Frontend/src/assets/landingpage.css
@@ -533,7 +533,6 @@ body {
 
 .brainsshare-tag 
 {
-    width: 75px;
     height: 25px;
     font-size: 14px;
     font-weight: 400;
@@ -545,8 +544,8 @@ body {
     margin-right: 10px;
     margin-bottom: 10px;
     font-weight: 500;
-    text-overflow: ellipsis;
-    overflow: hidden;
+    /* text-overflow: ellipsis;
+    overflow: hidden; */
 }
 
 .tag-title {
