--- a/Frontend/src/assets/landingpage.css
+++ b/Frontend/src/assets/landingpage.css
@@ -256,6 +256,7 @@ body {
 .carousel-component-body-desc-class p {
     margin-bottom: 10px;
     font-weight: 400;
+    word-break: break-word;
 }
 
 .carousel-component-body-desc-class a {
