--- a/Frontend/src/assets/student.css
+++ b/Frontend/src/assets/student.css
@@ -419,14 +419,15 @@ body {
     color: #333333;
     padding-bottom: 10px;
     line-height: 18px;
-    width: 1100px;
 }
 
 .mentor-detail-myself p {
     margin-bottom: 10px;
     font-weight: 400;
     text-overflow: ellipsis;
-	overflow: hidden;
+    overflow: hidden;
+    max-width: 85%;
+    word-break: break-word;
 }
 
 .mentor-detail-myself a {
@@ -452,7 +453,8 @@ body {
     font-weight: bold;
     width: 146px;
     height: 100%;
-    padding-right: 15px;
+    position: absolute;
+    right: 45px;
 }
 
 .btn-mentor-detail-instant {
