--- a/Frontend/src/assets/mentorWallet.css
+++ b/Frontend/src/assets/mentorWallet.css
@@ -981,6 +981,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    height: 4.1% !important;
   }
 
   .rbc-events-container {
@@ -1000,7 +1001,7 @@
   }
 
   .week-event-content {
-    font-size: 12px;
+    font-size: 10px;
     font-weight: 500;
     padding: 5px;
   }
