--- a/Frontend/src/assets/landingpage.css
+++ b/Frontend/src/assets/landingpage.css
@@ -545,8 +545,9 @@ body {
     margin-right: 10px;
     margin-bottom: 10px;
     font-weight: 500;
-    /* text-overflow: ellipsis;
-    overflow: hidden; */
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 .tag-title {
