--- a/Frontend/src/assets/mentorWallet.css
+++ b/Frontend/src/assets/mentorWallet.css
@@ -930,7 +930,7 @@
     font-size: 14px;
     font-weight: 400;
     outline: none;
-    border: none;
+    /* border: none; */
     margin-bottom: 0px;
   }
   
