--- a/Frontend/src/assets/common.css
+++ b/Frontend/src/assets/common.css
@@ -185,3 +185,11 @@
   font-size: 16px;
   font-weight: bold;
 }
+
+.video-call-modal-disable {
+  visibility: hidden;
+}
+
+.video-call-modal-enable {
+  visibility: visible;
+}
