--- a/Frontend/src/assets/mentor.css
+++ b/Frontend/src/assets/mentor.css
@@ -395,3 +395,46 @@
 .top-modal {
     z-index: 9070;
 }
+
+.search-background {
+    width: 100%;
+    height: 360px;
+}
+
+.search-title {
+    color: #333333 !important;
+    font-weight: 800;
+    margin-top: 1rem;
+}
+
+.search-btn {
+    color: #333333 !important;
+    background-color: #FFFFFF !important;
+    font-size: 20px !important;
+    font-weight: normal !important;
+    border-color: #333333!important;
+    border-width: 1px !important;
+    border-radius: 50px !important;
+    width: 163px;
+    padding-left: 10px;
+    height: 46px;
+    margin-right: 20px;
+}
+
+.search-btn img{
+    padding-right: 10px;
+}
+
+.search-item-list {
+    padding-bottom: 10px;
+    font-size: 18px;
+}
+
+.search-item-list a {
+    color: #333333 !important;
+}
+
+.search-category {
+    color: #333333 !important;
+    list-style-image: url('../images/category-icon.svg');
+}
