--- a/Frontend/src/assets/common.css
+++ b/Frontend/src/assets/common.css
@@ -221,8 +221,27 @@
 
 .room-video-container {
   padding: 10px;
+  width: 100%;
+  height: 500px;
 }
 
 .chat-history {
   height: 200px !important;
+}
+
+.room-video-display-none {
+  display: none;
+}
+
+.local-video video {
+  position: absolute;
+  right: 150px;
+  top: 80px;
+  border-radius: 4px;
+  width: 200px;
+  height: 150px;
+}
+
+.participant-video video{
+  width: 100%;
 }
