--- a/Frontend/src/assets/student.css
+++ b/Frontend/src/assets/student.css
@@ -198,6 +198,30 @@ body {
     color: #FFFFFF;
 }
 
+.main-sidebar-mentor .nav .nav-item .nav-link.active, .main-sidebar-mentor .nav .nav-item .nav-link:hover, .main-sidebar-mentor .nav .nav-item.active, .main-sidebar-mentor .nav .nav-item:hover {
+    background-color: #00008B;
+    color: #FFFFFF;
+    stroke: white !important;
+    box-shadow: none;
+}
+
+.main-sidebar-mentor .nav .nav-item .nav-link.active i, .main-sidebar-mentor .nav .nav-item .nav-link:hover i, .main-sidebar-mentor .nav .nav-item.active i, .main-sidebar-mentor .nav .nav-item:hover i {
+    color: #FFFFFF;
+}
+
+.main-sidebar-mentor {
+    top:0;
+    position:fixed;
+    height:calc(100vh);
+    background:#fff;
+    z-index:1070;
+    will-change:transform;
+    transition:-webkit-transform .2s ease-in-out;
+    transition:transform .2s ease-in-out;
+    transition:transform .2s ease-in-out,-webkit-transform .2s ease-in-out;
+    box-shadow:0 .125rem 9.375rem rgba(90,97,105,.1),0 .25rem .5rem rgba(90,97,105,.12),0 .9375rem 1.375rem rgba(90,97,105,.1),0 .4375rem 2.1875rem rgba(165,182,201,.1)
+}
+
 .main-navbar {
     height: 94px;
     padding-top: 20px;
@@ -722,7 +746,7 @@ body {
     font-size: 18px;
     color: #333333;
     width: 100%;
-    padding: 5px 15px;
+    padding: 30px 15px;
     text-align: left;
 }
 
@@ -1131,6 +1155,12 @@ body {
 }
 
 .main-sidebar .nav .nav-item .nav-link {
+    font-weight: 400;
+    color: #999999;
+    padding: .9375rem 1.5625rem;
+}
+
+.main-sidebar-mentor .nav .nav-item .nav-link {
     font-weight: 400;
     color: #999999;
     padding: .9375rem 1.5625rem;
