--- a/Frontend/src/assets/common.css
+++ b/Frontend/src/assets/common.css
@@ -205,6 +205,7 @@
 .room-member {
   padding: 10px;
   background-color: white;
+  width: 20%;
 }
 
 .room-chat-area {
@@ -213,20 +214,27 @@
 }
 
 .room-container {
-  padding: 20px;
+  /* padding: 20px; */
   display: flex;
   justify-content: center;
   height: 100vh;
+  margin-right: -15px;
+  margin-left: -15px;
 }
 
-.room-video-container {
+/* .room-video-container {
   padding: 10px;
   width: 100%;
   height: 500px;
-}
+  height: 80vh;
+}*/
 
 .chat-history {
   height: 200px !important;
+}
+
+.chat-input {
+  /* height: 10vh; */
 }
 
 .room-video-display-none {
@@ -235,13 +243,86 @@
 
 .local-video video {
   position: absolute;
-  right: 150px;
-  top: 80px;
+  right: 350px;
+  top: 60px;
   border-radius: 4px;
   width: 200px;
   height: 150px;
 }
 
 .participant-video video{
+  /* height: 80vh; */
+}
+
+.room-video-container {
   width: 100%;
+  /* height: 100vh; */
+  background-color: pink;
+  /* padding-top: 5px; */
+  padding-bottom: 5px;
+}
+
+.room-chat-area {
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
+  padding-right: 50px;
+}
+
+.no-bottom-margin {
+  margin-bottom: 0px;
+}
+
+.room-control-container {
+  width: 100%;
+  height: 100px;
+  opacity: 0.6;
+  border-radius: 8px;
+  background-color: black;
+  position: absolute;
+  bottom: 0px;
+}
+
+.participant-video video {
+  /* height: 100vh - 40px; */
+  /* width: 100vw; */
+  /* object-fit: fill; */
+  height: 100vh;
+  min-height: 100%;
+}
+
+.room-button-container {
+  padding: 15px;
+  width: 100%;
+  height: 100px;
+  
+  border-radius: 8px;
+  
+  position: absolute;
+  top: 0px;
+}
+
+.room-button-container::after {
+  background-color: black;
+  opacity: 0.6;
+}
+
+.btn-room-call-decline {
+  margin: 12px 30px;
+  margin-right: 30px !important;
+  float: right;
+  width: 150px;
+  height: 80px;
+  opacity: 1.0;
+  background-color: #F9364D !important;
+  border-color: #F9364D !important;
+  color: white;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.room-small-video-container {
+  width: 20%;
+  background-color: gray;
+  height: 100vh;
 }
