--- a/Frontend/src/assets/common.css
+++ b/Frontend/src/assets/common.css
@@ -326,3 +326,10 @@
   background-color: gray;
   height: 100vh;
 }
+
+.room-call-session-titile {
+  width: 100%;
+  text-align: center;
+  position: absolute;
+  top: 20px;
+}
