--- a/Frontend/src/assets/mentor.css
+++ b/Frontend/src/assets/mentor.css
@@ -438,8 +438,8 @@
     margin-right: 20px;
 }
 
-.search-btn img{
-    padding-right: 10px;
+.search-btn svg{
+    margin-right: 5px;
 }
 
 .search-hourly {
@@ -475,9 +475,8 @@
     margin-right: 20px;
 }
 
-.search-level img{
-    padding-right: 10px;
-    stroke: #04B5FA;
+.search-level svg{
+    margin-right: 5px;
 }
 
 .search-item-list {
