--- a/Frontend/src/assets/common.css
+++ b/Frontend/src/assets/common.css
@@ -438,5 +438,11 @@
 
 .draggable-video-item {
   width: 250px !important;
-  z-index: -1;
+  height: 100%;
+  /* z-index: -1;
+  position: absolute;
+  top: 100px;
+  right: 100px;
+  visibility: hidden;
+  background: #00000000; */
 }
